Revert "Fixed avtar overlap issue"
This reverts commit 18832e44c4c49ed62284f910c0c070e5a4440c9c.

--- a/style.css
+++ b/style.css
@@ -2128,7 +2128,10 @@ body.page .main-navigation {
 
 @media only screen and (min-width: 1168px) {
   #comments > #respond .comment-user-avatar {
+    position: absolute;
     display: block;
+    top: 0;
+    left: 0;
   }
   #comments > #respond .comment-user-avatar .avatar {
     display: block;
